Fixed RIFT, implemented most of Cornflower, only the eclipse presets, cmf/ccmf packaging and modfile manifest generation are still todo.